--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>hello</title>
-    <script src="index.js" type="module"></script>
+    <title>Title</title>
 </head>
 <body>
-    <div id="root"></div>
+<main id="root"></main>
+<script type="module" src="index.js"></script>
 </body>
 </html>
